logs/mobility/build.make.099.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:870:5: error: expected unqualified-id before ‘if’
     if (message->detections.size() > 0 && !targetCollected) {
     ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
